--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -21,7 +21,7 @@
 {% endif %}
 {% if site.github %}
 <!-- Documentation extras -->
-<link href="{{ site.baseurl }}/assets/css/docs.min.css" rel="stylesheet">
+<!-- <link href="{{ site.baseurl }}/assets/css/docs.min.css" rel="stylesheet"> -->
 <link href="{{ site.baseurl }}/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 <link href="{{ site.baseurl }}/assets/css/src/pygments-manni.css" rel="stylesheet">
 <link href="{{ site.baseurl }}/assets/css/src/docs.css" rel="stylesheet">
