--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -1,5 +1,5 @@
-<!-- Left Navigation on SMALL screens (mmenu) -->
 {% if page.slug == "examples" %}
+<!-- Left Navigation on SMALL screens (mmenu) -->
 <nav id="mobileleftmenu">{% include ku-mobilemenu-dummy.html %}</nav>
 {% endif %}
 <!-- Footer -->
@@ -100,19 +100,14 @@
     </div>
   </div>
 </footer>
-
-<!-- Bootstrap core JavaScript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-{% if page.slug == 'examples' %}
-<!-- Mobile menu -->
-<script type="text/javascript" src="../../assets/js/mmenu/jquery.mmenu.all.min.js"></script>
-<script src="../../custom/ku-mobile-menu.js"></script>
-{% endif %}
 {% if site.github %}
 <script src="{{ site.baseurl }}/dist/js/bootstrap.min.js"></script>
+<script src="{{ site.baseurl }}/assets/js/mmenu/jquery.mmenu.all.min.js"></script>
+<script src="{{ site.baseurl }}/custom/ku-mobile-menu.js"></script>
 {% elsif page.slug == 'examples' %}
 <script src="../../dist/js/bootstrap.min.js"></script>
+<script src="../../assets/js/mmenu/jquery.mmenu.all.min.js"></script>
+<script src="../../custom/ku-mobile-menu.js"></script>
 {% else %}
 <script src="../dist/js/bootstrap.js"></script>
 {% endif %}
