--- a/docs/_includes/css/type.html
+++ b/docs/_includes/css/type.html
@@ -9,27 +9,27 @@
       <tbody>
         <tr>
           <td><h1>h1. Bootstrap heading</h1></td>
-          <td class="type-info">Semibold 36px</td>
+          <td class="type-info">Normal 24px</td>
         </tr>
         <tr>
           <td><h2>h2. Bootstrap heading</h2></td>
-          <td class="type-info">Semibold 30px</td>
+          <td class="type-info">Normal 19px</td>
         </tr>
         <tr>
           <td><h3>h3. Bootstrap heading</h3></td>
-          <td class="type-info">Semibold 24px</td>
+          <td class="type-info">Semibold 15px</td>
         </tr>
         <tr>
           <td><h4>h4. Bootstrap heading</h4></td>
-          <td class="type-info">Semibold 18px</td>
-        </tr>
-        <tr>
-          <td><h5>h5. Bootstrap heading</h5></td>
           <td class="type-info">Semibold 14px</td>
         </tr>
         <tr>
+          <td><h5>h5. Bootstrap heading</h5></td>
+          <td class="type-info">Semibold 13px</td>
+        </tr>
+        <tr>
           <td><h6>h6. Bootstrap heading</h6></td>
-          <td class="type-info">Semibold 12px</td>
+          <td class="type-info">Bold 12px</td>
         </tr>
       </tbody>
     </table>
@@ -80,7 +80,7 @@
 
   <!-- Body copy -->
   <h2 id="type-body-copy">Body copy</h2>
-  <p>Bootstrap's global default <code>font-size</code> is <strong>14px</strong>, with a <code>line-height</code> of <strong>1.428</strong>. This is applied to the <code>&lt;body&gt;</code> and all paragraphs. In addition, <code>&lt;p&gt;</code> (paragraphs) receive a bottom margin of half their computed line-height (10px by default).</p>
+  <p>Bootstrap's global default <code>font-size</code> is <strong>12px</strong>, with a <code>line-height</code> of <strong>1.3333</strong>. This is applied to the <code>&lt;body&gt;</code> and all paragraphs. In addition, <code>&lt;p&gt;</code> (paragraphs) receive a bottom margin of half their computed line-height (10px by default).</p>
   <div class="bs-example" data-example-id="body-copy">
     <p>Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
     <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non metus auctor fringilla. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec ullamcorper nulla non metus auctor fringilla.</p>
