--- a/less/variables.less
+++ b/less/variables.less
@@ -79,9 +79,9 @@
 // }
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&subset=latin-ext');
 //** File name for all font files.
-@font-name-base:          "notosans-regular-webfont";
+//@font-name-base:          "notosans-regular-webfont";
 //** Element ID within SVG icon file.
-@font-name-svg-id:        "noto_sans_regular";
+//@font-name-svg-id:        "noto_sans_regular";
 @font-family-sans-serif:  "Open Sans", Helvetica, Arial, sans-serif;
 @font-family-serif:       Georgia, "Times New Roman", Times, serif;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
@@ -96,7 +96,7 @@
 @font-size-h1:            floor((@font-size-base * 2)); // ~24px
 @font-size-h2:            floor((@font-size-base * 1.6)); // ~19px
 @font-size-h3:            ceil((@font-size-base * 1.25)); // ~15px
-@font-size-h4:            ceil((@font-size-base * 1.2)); // ~14px
+@font-size-h4:            floor((@font-size-base * 1.2)); // ~14px
 @font-size-h5:            ceil((@font-size-base * 1.1)); // ~13px
 @font-size-h6:            @font-size-base;
 
