--- a/docs/_includes/nav/main.html
+++ b/docs/_includes/nav/main.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="../" class="navbar-brand">Bootstrap</a>
+      <a href="{% if site.github %}{{ site.baseurl }}{% else %}../{% endif %}" class="navbar-brand">KU Bootstrap</a>
     </div>
     <nav id="bs-navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
