--- a/less/ku-branding.less
+++ b/less/ku-branding.less
@@ -45,10 +45,10 @@
     .theme-sund & {
       border-bottom: 1px solid @sund;
     }
-    .theme-jura & {
+    .theme-jur & {
       border-bottom: 1px solid @jura;
     }
-    .theme-teol & {
+    .theme-teo & {
       border-bottom: 1px solid @teol;
     }
   }
