--- a/less/panels.less
+++ b/less/panels.less
@@ -286,11 +286,11 @@
       border-top: 1px solid @sund;
     }
 
-    .theme-jura & {
+    .theme-jur & {
       border-top: 1px solid @jura;
     }
 
-    .theme-teol & {
+    .theme-teo & {
       border-top: 1px solid @teol;
     }
   }
