--- a/docs/_includes/nav/ku-nav.html
+++ b/docs/_includes/nav/ku-nav.html
@@ -50,21 +50,21 @@
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="#">Nyheder</a>
             <ul class="dropdown-menu nyheder">
                 <li>
-                    <img src="http://placehold.it/55x55" alt="">
+                    <img src="https://placehold.it/55x55" alt="">
                     <a href="#">Danmarks rigshospital for dyr slår dørene op</a>
                     <div class="small">16. december 2016</div>
                 </li>
                 <li>
-                    <img src="http://placehold.it/55x55" alt="">
+                    <img src="https://placehold.it/55x55" alt="">
                     <a href="#">Gode karakterer til studiemiljøet</a>
                     <div class="small">8. marts 2016</div>
                 </li>
                 <li>
-                    <img src="http://placehold.it/55x55" alt="">
+                    <img src="https://placehold.it/55x55" alt="">
                     <a href="#">KU beklager behandling af studerende</a>
                     <div class="small">7. marts 2016</div>
                 </li>
-                <li><a href="http://nyheder.ku.dk/">Alle nyheder</a></li>
+                <li><a href="https://nyheder.ku.dk/">Alle nyheder</a></li>
             </ul>
         </li>
         <li class="dropdown">
