--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -3,7 +3,8 @@
  * Copyright 2011-2016 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
-
+// Global font
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&subset=latin-ext');
 // Core variables and mixins
 @import "variables.less";
 @import "mixins.less";
@@ -67,4 +68,4 @@
 @import "ku-datetimepicker.less";
 @import "ku-misc.less";
 @import "ku-privacypolicy.less";
-@import "ku-gridboxes.less";
+//@import "ku-gridboxes.less";
