--- a/less/variables.less
+++ b/less/variables.less
@@ -66,7 +66,7 @@
 
 //== Typography
 //
-//## Font, line-height, and color for body text, headings, and more.
+//## Global Google font is in bootstrap.less. Font, line-height, and color for body text, headings, and more.
 // @font-face {
 //   font-family: 'noto sans regular';
 //   src: url('@{icon-font-path}@{font-name-base}.eot');
@@ -77,7 +77,7 @@
 //        url('@{icon-font-path}@{font-name-base}.svg#@{font-name-svg-id}') format('svg');
 //
 // }
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&subset=latin-ext');
+
 //** File name for all font files.
 //@font-name-base:          "notosans-regular-webfont";
 //** Element ID within SVG icon file.
