--- a/less/ku-gridboxes.less
+++ b/less/ku-gridboxes.less
@@ -1,4 +1,5 @@
-//
+@import "variables.less";
+@import "mixins.less"; //
 // KU custom grid box styling
 // --------------------------------------------------
 // Grid box styles
@@ -7,6 +8,7 @@
 // full: with full background color
 // text-top: text-bar at the top
 // text-down: text-bar at the bottom
+// text-over: overlays content
 // Grid box sizes
 @gridbox0: 370px; // Special news box size
 @gridbox1: 289px; // .size1
@@ -80,10 +82,6 @@
 @jura-sub_4: #a3650c;
 @jura-sub_4-hover: #8f570a;
 
-.gridbox * {
-  box-sizing: border-box;
-}
-
 .gridbox {
   width: 100%;
   position: relative;
@@ -99,9 +97,8 @@
     }
   }
 
-  .text {
-    font-size: 13px;
-    color: @ku-gridbox-text;
+  * {
+    box-sizing: border-box;
   }
 
   .theme-faelles & {
@@ -904,7 +901,7 @@
     }
   }
 
-  .theme-teol & {
+  .theme-teo & {
     &.faculty_color {
       &.text-down {
         .header {
@@ -1689,7 +1686,7 @@
     }
   }
 
-  .theme-jura & {
+  .theme-jur & {
     &.faculty_color {
       &.text-down {
         .header {
@@ -2156,6 +2153,11 @@
       letter-spacing: 0.4px;
       width: 100%;
     }
+
+    .text {
+      font-size: 13px;
+      color: @ku-gridbox-text;
+    }
   }
 
   .box2 {
@@ -2164,6 +2166,7 @@
     flex: 1 1 auto;
   }
   // Add an arrow to the box
+
   &::before {
     display: inline-block;
     font-family: 'arrow';
@@ -2175,6 +2178,7 @@
     z-index: 5;
   }
   // Hide arrow
+
   &.no-arrow {
     &::before {
       display: none;
@@ -2229,8 +2233,10 @@
     }
   }
   // Videos
+
   &.with-iframe {
-    background-color: @ku-gray;
+    background: @ku-gray;
+    color: initial!important;
 
     &::before {
       display: none;
@@ -2241,6 +2247,7 @@
     }
   }
   // Boxes with the title at the top
+
   &.text-top {
     .box1 {
       order: 1;
@@ -2256,6 +2263,7 @@
     }
   }
   // Boxes with the title at the bottom
+
   &.text-down {
     .box1 {
       order: 2;
@@ -2266,6 +2274,7 @@
     }
   }
   // Boxes with the text above the content
+
   &.text-over {
     .header {
       position: absolute;
@@ -2275,6 +2284,7 @@
     }
   }
   // Height 298px
+
   &.size1 {
     height: @gridbox1;
     background: @ku-gray;
@@ -2357,6 +2367,7 @@
     color: inherit;
   }
   // Height 185px
+
   &.size2 {
     height: @gridbox2;
 
@@ -2386,6 +2397,7 @@
     }
   }
   // Height 133px
+
   &.size3 {
     height: @gridbox3;
 
@@ -2415,6 +2427,7 @@
     }
   }
   // Height 81px
+
   &.size4 {
     height: @gridbox4;
 
@@ -2429,6 +2442,7 @@
     }
   }
   // Height 55px
+
   &.size5 {
     height: @gridbox5;
 
@@ -2447,6 +2461,7 @@
     }
   }
 }
+//.gridbox
 
 .boxlink {
   color: inherit!important;
@@ -2616,7 +2631,7 @@
         }
       }
 
-      .theme-teol & {
+      .theme-teo & {
         &.faculty_color {
           background: @teol;
         }
@@ -2686,7 +2701,7 @@
         }
       }
 
-      .theme-jura & {
+      .theme-jur & {
         color: @white-color;
 
         &.faculty_color {
@@ -2951,7 +2966,7 @@
         }
       }
 
-      .theme-teol & {
+      .theme-teo & {
         &.faculty_color {
           .header {
             background: fade(@teol, 83%);
@@ -3062,7 +3077,7 @@
         }
       }
 
-      .theme-jura & {
+      .theme-jur & {
         &.faculty_color {
           .header {
             background: fade(@jura, 83%);
@@ -3335,6 +3350,22 @@
         }
       }
     }
+    // Videos with text overlay at the top
+    .size2 {
+      &.with-iframe {
+        background: transparent;
+        .box1 {
+          flex: 0 1 auto;
+          z-index: 4;
+          .header {
+            background: fade(@ku-gray, 75%);
+            position: absolute;
+            top: 0;
+            left: 0;
+          }
+        }
+      }
+    }
   }
   // Large desktop arrow style for outlined with image
   .double-column [class*=column],
@@ -3373,7 +3404,7 @@
             }
           }
 
-          .theme-teol & {
+          .theme-teo & {
             &::before {
               color: @white-color;
             }
@@ -3391,7 +3422,7 @@
             }
           }
 
-          .theme-jura & {
+          .theme-jur & {
             &::before {
               color: @white-color;
             }
@@ -3464,7 +3495,6 @@
     }
   }
   // Double columns
-
   .double-column [class*=column] {
     .size1 {
       &.with-img {
@@ -3511,20 +3541,20 @@
 }
 @media only screen and (max-width: 869px) {
   // Dynamic height for boxes without images
-    &.size2,
-    &.size3 {
-      &:not(.with-img) {
-        &.full,
-        &.outlined {
-          height: auto!important;
+  &.size2,
+  &.size3 {
+    &:not(.with-img) {
+      &.full,
+      &.outlined {
+        height: auto!important;
 
-          .box1 {
-            flex: 1 1 auto;
-            padding-bottom: 5px;
-          }
+        .box1 {
+          flex: 1 1 auto;
+          padding-bottom: 5px;
         }
       }
     }
+  }
 }
 @media only screen and (min-width: 681px) and (max-width: 869px) {
   // Front page / no menu
@@ -3674,7 +3704,7 @@
           }
         }
 
-        .theme-teol & {
+        .theme-teo & {
           &.faculty_color {
             background: @teol;
           }
@@ -3740,7 +3770,7 @@
           }
         }
 
-        .theme-jura & {
+        .theme-jur & {
           &.faculty_color {
             background: @jura;
           }
@@ -3931,7 +3961,7 @@
             }
           }
 
-          .theme-teol & {
+          .theme-teo & {
             &.faculty_color {
               .header {
                 color: @teol;
@@ -4027,7 +4057,7 @@
             }
           }
 
-          .theme-jura & {
+          .theme-jur & {
             &.faculty_color {
               .header {
                 color: @jura;
@@ -4450,7 +4480,7 @@
             }
           }
 
-          .theme-teol & {
+          .theme-teo & {
             &.faculty_color {
               .header {
                 background: fade(@teol, 83%);
@@ -4546,7 +4576,7 @@
             }
           }
 
-          .theme-jura & {
+          .theme-jur & {
             &.faculty_color {
               .header {
                 background: fade(@jura, 83%);
