--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -109,7 +109,7 @@
 <script src="../../assets/js/mmenu/jquery.mmenu.all.min.js"></script>
 <script src="../../custom/ku-mobile-menu.js"></script>
 {% else %}
-<script src="../dist/js/bootstrap.js"></script>
+<script src="{{ site.baseurl }}/dist/js/bootstrap.js"></script>
 {% endif %}
 {% if site.github %}
 <script src="{{ site.baseurl }}/assets/js/docs.min.js"></script>
