--- a/docs/_includes/js/collapse.html
+++ b/docs/_includes/js/collapse.html
@@ -54,7 +54,7 @@
     <button class="btn btn-default closeall">Close all</button>
     <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
       <div class="panel panel-accordion">
-        <div class="panel-heading" role="tab" id="headingOne">
+        <div class="panel-heading open" role="tab" id="headingOne">
           <h4 class="panel-title">
             <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
               Collapsible Group Item #1
@@ -102,7 +102,7 @@
 <button class="btn btn-default closeall">Close all</button>
 <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
   <div class="panel panel-accordion">
-    <div class="panel-heading" role="tab" id="headingOne">
+    <div class="panel-heading open" role="tab" id="headingOne">
       <h4 class="panel-title">
         <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
           Collapsible Group Item #1
