--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -10,7 +10,6 @@
     {{ page.title }} &middot; Bootstrap
   {% endif %}
 </title>
-<!-- Bootstrap core CSS -->
 {% if page.slug == 'examples' %}
 <link href="../../dist/css/bootstrap.css" rel="stylesheet">
 <link href="../../dist/css/ku-gridboxes.css" rel="stylesheet">
@@ -26,18 +25,17 @@
 <link href="{{ site.baseurl }}/assets/css/src/pygments-manni.css" rel="stylesheet">
 <link href="{{ site.baseurl }}/assets/css/src/docs.css" rel="stylesheet">
 {% endif %}
-<!-- jQuery -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 {% if site.github %}
 <script>
   window.jQuery || document.write('<script src="{{ site.baseurl }}/assets/js/vendor/jquery.min.js"><\/script>')
 </script>
 {% endif %}
-{% if page.slug == 'examples' %}
+{% if site.github %}
+<script src="{{ site.baseurl }}/assets/js/datetimepicker/bootstrap-datetimepicker.js"></script>
+{% elsif page.slug == 'examples' %}
 <!-- Bootstrap datetimepicker -->
 <script src="../../assets/js/datetimepicker/bootstrap-datetimepicker.js"></script>
-{% else %}
-<script src="{{ site.baseurl }}/assets/js/datetimepicker/bootstrap-datetimepicker.js"></script>
 {% endif %}
 <!--[if lt IE 9]><script src="../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -45,7 +43,6 @@
   <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 <![endif]-->
-<!-- Favicons -->
 {% if page.slug == 'examples' %}
 <link rel="apple-touch-icon" href="../../apple-touch-icon.png">
 <link rel="icon" href="../../images/favicons/favicon_fa.ico">
