--- a/less/type.less
+++ b/less/type.less
@@ -222,6 +222,9 @@ ol,
 ul {
   margin-top: 0;
   margin-bottom: (@line-height-computed / 2);
+  li {
+    margin: 2px 0;
+  }
 
   ol,
   ul {
@@ -254,6 +257,8 @@ dl {
 dd,
 dt {
   line-height: @line-height-base;
+  margin-top: 1px;
+  margin-bottom: 1px;
 }
 
 dt {
