--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -67,4 +67,5 @@
 @import "ku-datatables.less";
 @import "ku-datetimepicker.less";
 @import "ku-misc.less";
+@import "ku-kurser.less";
 @import "ku-privacypolicy.less";
