--- a/less/KU-misc.less
+++ b/less/KU-misc.less
@@ -146,6 +146,12 @@ nav {
   position: relative;
 }
 
+.w100 {
+  width: 100%;
+}
+.wauto {
+  width: auto;
+}
  // Let's target IE to respect aspect ratios and sizes for img tags containing SVG files - Thanks IE! :-/
 
 .ie9 img[src$=".svg"] {
