--- a/less/variables.less
+++ b/less/variables.less
@@ -59,7 +59,8 @@
 //** Global textual link color.
 @link-color:            #165aad;
 //** Link hover color set via `darken()` function.
-@link-hover-color:      #3d239c;
+@link-hover-color:      @link-color;
+@link-visited-color:      #3d239c;
 //** Link hover decoration.
 @link-hover-decoration: underline;
 
