--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -18,8 +18,8 @@
 {% else %}
 <link href="{{ site.baseurl }}/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="{{ site.baseurl }}/dist/css/ku-gridboxes.min.css" rel="stylesheet">
-<link href="{{ site.baseurl }}/assets/css/multiple-select/multiple-select.css" rel="stylesheet">
-<link href="{{ site.baseurl }}/assets/css/datatables/datatables.min.css" rel="stylesheet">
+<link href="{{ site.baseurl }}/dist/css/multiple-select/multiple-select.min.css" rel="stylesheet">
+<link href="{{ site.baseurl }}/dist/css/datatables/datatables.min.css" rel="stylesheet">
 {% endif %}
 <!-- Documentation extras - not for production -->
 {% if page.slug == "cexamples"%}
@@ -37,18 +37,18 @@
 {% endif %}
 {% if site.github %}
 <!-- Bootstrap datetimepicker -->
-<script src="{{ site.baseurl }}/assets/js/datetimepicker/bootstrap-datetimepicker.js"></script>
+<script src="{{ site.baseurl }}/dist/js/bootstrap-datetimepicker.js"></script>
 {% elsif page.slug == 'examples' %}
 <!-- Bootstrap datetimepicker -->
 <script src="../../assets/js/datetimepicker/bootstrap-datetimepicker.js"></script>
 {% endif %}
 {% if site.github %}
 <!-- Bootstrap multiple select -->
-<script src="{{ site.baseurl }}/assets/js/multiple-select/ku-multiple-select.min.js"></script>
-<script src="{{ site.baseurl }}/assets/js/datatables/datatables.min.js"></script>
+<script src="{{ site.baseurl }}/dist/js/multiple-select.min.js"></script>
+<script src="{{ site.baseurl }}/dist/js/datatables.min.js"></script>
 {% elsif page.tags == 'kurser' %}
 <!-- Bootstrap multiple select -->
-<script src="../../assets/js/multiple-select/ku-multiple-select.js"></script>
+<script src="../../assets/js/multiple-select/multiple-select.js"></script>
 <script src="../../assets/js/datatables/datatables.js"></script>
 {% endif %}
 <!--[if lt IE 9]><script src="../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
