--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -153,3 +153,9 @@ hr {
 [role="button"] {
   cursor: pointer;
 }
+
+@media (max-width: @screen-sm-min) {
+  .form-control, .btn {
+    font-size: @font-size-large!important;
+  }
+}
