--- a/less/utilities.less
+++ b/less/utilities.less
@@ -2,6 +2,13 @@
 // Utility classes
 // --------------------------------------------------
 
+// Text-overflow elipsis:
+
+.textelipsis {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
 
 // Floats
 // -------------------------
