--- a/docs/assets/css/datatables/datatables.css
+++ b/docs/assets/css/datatables/datatables.css
@@ -31,42 +31,46 @@ table.dataTable.nowrap td {
   white-space: nowrap;
 }
 
-div.dataTables_wrapper div.dataTables_length label {
+.dataTables_wrapper div.dataTables_length label {
   font-weight: normal;
   text-align: left;
   white-space: nowrap;
 }
-div.dataTables_wrapper div.dataTables_length select {
+.dataTables_wrapper div.dataTables_length select {
   width: 75px;
   display: inline-block;
 }
-div.dataTables_wrapper div.dataTables_filter {
+.dataTables_wrapper select.input-sm {
+    height: 29px;
+    line-height: 26px;
+}
+.dataTables_wrapper div.dataTables_filter {
   text-align: right;
 }
-div.dataTables_wrapper div.dataTables_filter label {
+.dataTables_wrapper div.dataTables_filter label {
   font-weight: normal;
   white-space: nowrap;
   text-align: left;
 }
-div.dataTables_wrapper div.dataTables_filter input {
+.dataTables_wrapper div.dataTables_filter input {
   margin-left: 0.5em;
   display: inline-block;
   width: auto;
 }
-div.dataTables_wrapper div.dataTables_info {
+.dataTables_wrapper div.dataTables_info {
   padding-top: 8px;
   white-space: nowrap;
 }
-div.dataTables_wrapper div.dataTables_paginate {
+.dataTables_wrapper div.dataTables_paginate {
   margin: 0;
   white-space: nowrap;
   text-align: right;
 }
-div.dataTables_wrapper div.dataTables_paginate ul.pagination {
+.dataTables_wrapper div.dataTables_paginate ul.pagination {
   margin: 2px 0;
   white-space: nowrap;
 }
-div.dataTables_wrapper div.dataTables_processing {
+.dataTables_wrapper div.dataTables_processing {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -150,10 +154,10 @@ div.dataTables_scrollFoot table {
 }
 
 @media screen and (max-width: 767px) {
-  div.dataTables_wrapper div.dataTables_length,
-  div.dataTables_wrapper div.dataTables_filter,
-  div.dataTables_wrapper div.dataTables_info,
-  div.dataTables_wrapper div.dataTables_paginate {
+  .dataTables_wrapper div.dataTables_length,
+  .dataTables_wrapper div.dataTables_filter,
+  .dataTables_wrapper div.dataTables_info,
+  .dataTables_wrapper div.dataTables_paginate {
     text-align: center;
   }
 }
@@ -185,13 +189,13 @@ div.dataTables_scrollHead table.table-bordered {
   border-bottom-width: 0;
 }
 
-div.table-responsive > div.dataTables_wrapper > div.row {
+div.table-responsive > .dataTables_wrapper > div.row {
   margin: 0;
 }
-div.table-responsive > div.dataTables_wrapper > div.row > div[class^="col-"]:first-child {
+div.table-responsive > .dataTables_wrapper > div.row > div[class^="col-"]:first-child {
   padding-left: 0;
 }
-div.table-responsive > div.dataTables_wrapper > div.row > div[class^="col-"]:last-child {
+div.table-responsive > .dataTables_wrapper > div.row > div[class^="col-"]:last-child {
   padding-right: 0;
 }
 
@@ -245,8 +249,10 @@ table.dataTable.dtr-inline.collapsed > tbody > tr > th:first-child:before {
   color: white;
   border: 2px solid white;
   border-radius: 14px;
-  box-shadow: 0 0 3px #444;
-  box-sizing: content-box;
+  -webkit-box-shadow: 0 0 3px #444;
+          box-shadow: 0 0 3px #444;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
   text-align: center;
   font-family: 'Courier New', Courier, monospace;
   line-height: 14px;
@@ -293,8 +299,10 @@ table.dataTable.dtr-column > tbody > tr > th.control:before {
   color: white;
   border: 2px solid white;
   border-radius: 14px;
-  box-shadow: 0 0 3px #444;
-  box-sizing: content-box;
+  -webkit-box-shadow: 0 0 3px #444;
+          box-shadow: 0 0 3px #444;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
   text-align: center;
   font-family: 'Courier New', Courier, monospace;
   line-height: 14px;
@@ -336,7 +344,8 @@ table.dataTable > tbody > tr.child span.dtr-title {
 
 div.dtr-modal {
   position: fixed;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   top: 0;
   left: 0;
   height: 100%;
@@ -359,7 +368,8 @@ div.dtr-modal div.dtr-modal-display {
   background-color: #f5f5f7;
   border: 1px solid black;
   border-radius: 0.5em;
-  box-shadow: 0 12px 30px rgba(0, 0, 0, 0.6);
+  -webkit-box-shadow: 0 12px 30px rgba(0, 0, 0, 0.6);
+          box-shadow: 0 12px 30px rgba(0, 0, 0, 0.6);
 }
 div.dtr-modal div.dtr-modal-content {
   position: relative;
@@ -399,5 +409,3 @@ div.dtr-modal div.dtr-modal-background {
 div.dtr-bs-modal table.table tr:first-child td {
   border-top: none;
 }
-
-
