--- a/docs/_includes/ku-leftmenu.html
+++ b/docs/_includes/ku-leftmenu.html
@@ -17,7 +17,11 @@
           <li><a href="../ku-gridboxes/">Template with grid boxes</a></li>
           <li><a href="../ku-datatables/">Template with data tables</a></li>
           <li><a href="../ku-formvalidation/">Template with form validation</a></li>
-          <li><a href="../ku-courses/">Kurser.ku.dk</a></li>
+          <li><a href="../ku-courses/">Kurser.ku.dk</a>
+            <ul>
+              <li><a href="../ku-course-details/">Kursus detaljeside</a></li>
+            </ul>
+          </li>
           <li class="active"><a href="#">Link 2.1</a>
             <ul>
               <li><a href="#">Link 3.1</a></li>
