--- a/less/forms.less
+++ b/less/forms.less
@@ -45,7 +45,7 @@ label {
 
 // Override content-box in Normalize (* isn't specific enough)
 input[type="search"] {
-  .box-sizing(border-box);
+  box-sizing: border-box;
 }
 
 // Position radios and checkboxes better
