--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -4,57 +4,62 @@
 <meta name="description" content="Københavns Universitet er med cirka 40.000 studerende og 9.000 medarbejdere en af Nordens største forsknings- og uddannelsesinstitutioner.">
 <meta name="author" content="Københavns Universitet">
 <title>
-  {% if page.layout == "home" %}
-    {{ page.title }}
-  {% else %}
     {{ page.title }} &middot; Bootstrap
-  {% endif %}
 </title>
-{% if page.slug == 'examples' %}
+{% if site.github %}
+<link rel="apple-touch-icon" href="{{ site.baseurl }}/apple-touch-icon.png">
+<link rel="icon" href="{{ site.baseurl }}/favicon.ico">
+<link href="{{ site.baseurl }}/dist/css/bootstrap.min.css" rel="stylesheet">
+{% if page.slug == "default" %}
+<!-- Documentation extras - not for production -->
+<link href="{{ site.baseurl }}/assets/css/src/pygments-manni.css" rel="stylesheet">
+<link href="{{ site.baseurl }}/assets/css/src/docs.min.css" rel="stylesheet">
+{% elsif page.slug == "examples" %}
+<link href="{{ site.baseurl }}/dist/css/ku-gridboxes.min.css" rel="stylesheet">
+<link href="{{ site.baseurl }}/dist/css/multiple-select.min.css" rel="stylesheet">
+<link href="{{ site.baseurl }}/dist/css/datatables.min.css" rel="stylesheet">
+{% endif %}
+{% if page.category == "kurser" %}
+<!-- Kurser.ku.dk -->
+<link href="{{ site.baseurl }}/assets/css/kurser.ku.dk/kurser.css" rel="stylesheet">
+{% endif %}
+{% else %}
+<link rel="apple-touch-icon" href="../../apple-touch-icon.png">
+<link rel="icon" href="../../images/favicons/favicon_fa.ico">
 <link href="../../dist/css/bootstrap.css" rel="stylesheet">
+{% if page.slug == "default" %}
+<!-- Documentation extras - not for production -->
+<link href="../../assets/css/src/pygments-manni.css" rel="stylesheet">
+<link href="../../assets/css/src/docs.css" rel="stylesheet">
+{% elsif page.slug == "examples" %}
 <link href="../../dist/css/ku-gridboxes.css" rel="stylesheet">
 <link href="../../assets/css/multiple-select/multiple-select.css" rel="stylesheet">
 <link href="../../assets/css/datatables/datatables.css" rel="stylesheet">
-{% else %}
-<link href="{{ site.baseurl }}/dist/css/bootstrap.min.css" rel="stylesheet">
-<link href="{{ site.baseurl }}/dist/css/ku-gridboxes.min.css" rel="stylesheet">
 {% endif %}
-{% if site.github and page.tags == 'kurser' %}
-<link href="{{ site.baseurl }}/assets/css/kurser.ku.dk/kurser.css" rel="stylesheet">
-{% elsif page.tags == 'kurser' %}
-<link href="../../assets/css/kurser.ku.dk/kurser.css" rel="stylesheet">
+{% if page.category == "kurser" %}
+<!-- Kurser.ku.dk -->
+  <link href="../../assets/css/kurser.ku.dk/kurser.css" rel="stylesheet">
 {% endif %}
-<!-- Documentation extras - not for production -->
-{% if page.slug == "cexamples"%}
-<link href="../../assets/css/src/pygments-manni.css" rel="stylesheet">
-<link href="../../assets/css/src/docs.min.css" rel="stylesheet">
-<link href="{{ site.baseurl }}/dist/css/multiple-select.min.css" rel="stylesheet">
-<link href="{{ site.baseurl }}/dist/css/datatables.min.css" rel="stylesheet">
-{% else %}
-<link href="{{ site.baseurl }}/assets/css/src/pygments-manni.css" rel="stylesheet">
-<link href="{{ site.baseurl }}/assets/css/src/docs.css" rel="stylesheet">
 {% endif %}
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 {% if site.github %}
 <script>
   window.jQuery || document.write('<script src="{{ site.baseurl }}/assets/js/vendor/jquery.min.js"><\/script>')
 </script>
-{% endif %}
-{% if site.github %}
-<!-- Bootstrap datetimepicker -->
+{% if page.slug == "examples"%}
+<!-- Bootstrap add-ons -->
 <script src="{{ site.baseurl }}/dist/js/bootstrap-datetimepicker.min.js"></script>
-{% elsif page.slug == 'examples' %}
-<!-- Bootstrap datetimepicker -->
-<script src="../../assets/js/datetimepicker/bootstrap-datetimepicker.js"></script>
-{% endif %}
-{% if site.github %}
-<!-- Bootstrap multiple select -->
 <script src="{{ site.baseurl }}/dist/js/multiple-select.min.js"></script>
 <script src="{{ site.baseurl }}/dist/js/datatables.min.js"></script>
-{% elsif page.tags == 'kurser' %}
-<!-- Bootstrap multiple select -->
+{% endif %}
+{% else %}
+{% if page.slug == "examples"%}
+<!-- Bootstrap add-ons -->
+<script src="../../assets/js/datetimepicker/bootstrap-datetimepicker.js"></script>
 <script src="../../assets/js/multiple-select/multiple-select.js"></script>
 <script src="../../assets/js/datatables/datatables.js"></script>
+{% endif %}
 {% endif %}
 <!--[if lt IE 9]><script src="../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -62,10 +67,3 @@
   <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 <![endif]-->
-{% if page.slug == 'examples' %}
-<link rel="apple-touch-icon" href="../../apple-touch-icon.png">
-<link rel="icon" href="../../images/favicons/favicon_fa.ico">
-{% else %}
-<link rel="apple-touch-icon" href="{{ site.baseurl }}/apple-touch-icon.png">
-<link rel="icon" href="{{ site.baseurl }}/favicon.ico">
-{% endif %}
