--- a/less/ku-gridboxes.less
+++ b/less/ku-gridboxes.less
@@ -2243,6 +2243,7 @@
 
     .header {
       border-right: 5px solid transparent;
+      color: @gray-dark;
     }
   }
   // Boxes with the title at the top
