--- a/less/type.less
+++ b/less/type.less
@@ -37,7 +37,7 @@ h1,
 h2,
 h3 {
   margin-top: @line-height-computed;
-  margin-bottom: 12px;
+  margin-bottom: 10px;
 
   .small,
   small {
@@ -234,6 +234,8 @@ ul {
 // List options
 // Unstyled keeps list items block level, just removes default browser padding and list-style
 .list-unstyled {
+  // KU specific:
+  margin-top: 2px;
   padding-left: 0;
   list-style: none;
 }
@@ -262,7 +264,7 @@ dt {
 }
 
 dt {
-  font-weight: bold;
+  font-weight: 600;
 }
 
 dd {
@@ -282,8 +284,8 @@ dd {
       float: left;
       width: (@dl-horizontal-offset - 20);
       clear: left;
-      text-align: right;
-      .text-overflow();
+      //text-align: right;
+      //.text-overflow();
     }
 
     dd {
